Added Frameworks skill, stil need to make icons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ul class="nav">
 			      <li class="dropdown">
 			      	<!-- Dropdown menu -->
-			        <a class="dropdown-toggle circle-main" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">   
+			        <a class="dropdown-toggle circle-main" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 						<svg class="hello" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
 						    <path d="M2 15.5v2h20v-2H2zm0-5v2h20v-2H2zm0-5v2h20v-2H2z"/>
 						    <path d="M0 0h24v24H0z" fill="none"/>
@@ -52,7 +52,7 @@
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#portfolio" class="menu-item menu-text">Portfolio</a></li>
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#timeline" class="menu-item menu-text">Timeline</a></li>
 						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#links" class="menu-item menu-text">Links and Resume</a></li>
-						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#contacto" class="menu-item menu-text">Contact Me</a></li>	
+						<li><a data-scroll data-options='{ "easing": "easeOutQuint" }' href="#contacto" class="menu-item menu-text">Contact Me</a></li>
 			        </ul>
 			      </li>
 			    </ul>
@@ -97,13 +97,13 @@
 			</div>
 		</article>
 	</section>
-	
+
 	<!-- Skills -->
 	<section id="skills" class="full-section-two bg-skills">
 		<div class="container">
 			<!-- Text Skills and Abilities -->
 			<h2 class="title-main mywhite">Languages and Frameworks</h2>
-			
+
 			<div class="row">
 				<div class="col-md-6 separ">
 					<div class="row">
@@ -117,33 +117,42 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-6 separ">
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/python.png"/></div>
-						<div class="col-sm-10">
-							<div class="row">
-								<div class="col-sm-12 title-skill">Python</div>
-								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-purple skill-seventy"></div>
+					<div class="framework row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Android</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-aqua skill-hundred"></div>
+									</div>
 								</div>
 							</div>
-						</div>
 					</div>
 				</div>
 				<div class="col-md-6 separ">
 					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
+						<div class="col-sm-2 hidden-xs icon-skill"><img class="img-skill" alt="ruby" src="img/ruby.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
-								<div class="col-sm-12 title-skill">C</div>
+								<div class="col-sm-12 title-skill">Ruby</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-blue skill-seventy"></div>
+									<div class="this-skill skill-red skill-fifty"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>	
+					<div class="framework row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Rails</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-red skill-seventy"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+				</div>
 				<div class="col-md-6 separ">
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="html" src="img/html.png"/></div>
@@ -156,7 +165,19 @@
 							</div>
 						</div>
 					</div>
-				</div>	
+					<div class="framework row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Bootstrap</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-pink skill-eighty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+				</div>
+
 				<div class="col-md-6 separ">
 					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="js" src="img/js.png"/></div>
@@ -169,24 +190,59 @@
 							</div>
 						</div>
 					</div>
+					<div class="framework row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Meteor.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-fifty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
+					<div class="framework row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+							<div class="col-sm-10">
+								<div class="row">
+									<div class="col-sm-12 title-framework">Node.js</div>
+									<div class="col-sm-12 bar-skill">
+										<div class="this-skill skill-green skill-twenty"></div>
+									</div>
+								</div>
+							</div>
+					</div>
 				</div>
+
 				<div class="col-md-6 separ">
 					<div class="row">
-						<div class="col-sm-2 hidden-xs icon-skill"><img class="img-skill" alt="ruby" src="img/ruby.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="python" src="img/python.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
-								<div class="col-sm-12 title-skill">Ruby</div>
+								<div class="title-skill">Python</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-red skill-eighty"></div>
+									<div class="this-skill skill-purple skill-seventy"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6 separ">
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="col-sm-12 title-skill">C</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-blue skill-seventy"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-				<p class="text-main mywhite"><br>I'm also fluent in English, French, and Mandarin</p>
-
+			<p class="text-main mywhite text-center"><br>I'm also fluent in English, French, and Mandarin</p>
 		</div>
 	</section>
 	<!-- // Skills-->
@@ -220,43 +276,43 @@
 							</a>
 							<a href="https://play.google.com/store/apps/details?id=com.trutechinnovations.calculall">
 							  <img alt="Get it on Google Play"
-							       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" 
+							       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png"
 							       class="project-icon"/>
 							</a>
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-portrait">
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall1.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall1.png" alt="calculall1"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall2.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall2.png" alt="calculall2"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall3.png" class="fancybox-thumbs" data-fancybox-group="calculall">
-										<img class="gallery" src="img/calculall3.png" alt="calculall3"/> 
+										<img class="gallery" src="img/calculall3.png" alt="calculall3"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall4.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall4.png" alt="calculall4"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall5.png" class="fancybox-thumbs" data-fancybox-group="calculall">
-										<img class="gallery" src="img/calculall5.png" alt="calculall5"/> 
+										<img class="gallery" src="img/calculall5.png" alt="calculall5"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall6.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall6.png" alt="calculall6"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/calculall7.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall7.png" alt="calculall7"/>
 									</a>
@@ -269,7 +325,7 @@
 							</div>
 						</div>
 					</div>
-				</li>	
+				</li>
 
 				<li id="fuser" class='col-md-6'>
 					<div class="panel">
@@ -281,17 +337,17 @@
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-portrait">
-								<div class="item"> 
+								<div class="item">
 									<a href="img/fuser1.png" class="fancybox-thumbs" data-fancybox-group="fuser">
 										<img class="gallery" src="img/fuser1.png" alt="fuser1"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/fuser2.png" class="fancybox-thumbs" data-fancybox-group="fuser">
 										<img class="gallery" src="img/fuser2.png" alt="fuser2"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/fuser3.png" class="fancybox-thumbs" data-fancybox-group="fuser">
 										<img class="gallery" src="img/fuser3.png" alt="fuser3"/>
 									</a>
@@ -305,7 +361,7 @@
 					</div>
 				</li>
 
-				<li id="block-survival" class='col-md-6'>	
+				<li id="block-survival" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h3 class="project-title">Block Survival</h3>
@@ -315,25 +371,25 @@
 							<a href="assets/block-survival.zip">
 							  <button class="btn btn-success project-icon">Download</button>
 							</a>
-						</div>	
+						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
-								<div class="item"> 
+								<div class="item">
 									<a class="fancybox-media" href='http://www.youtube.com/v/Y7VO62_o-ZI?fs=1&autoplay=1'>
 										<img class="gallery" src="img/trailer-img.png" alt="blocksurvival"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/blocksurvival1.png" class="fancybox-thumbs" data-fancybox-group="blocksurvival">
 										<img class="gallery" src="img/blocksurvival1.png" alt="blocksurvival1"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/blocksurvival2.png" class="fancybox-thumbs" data-fancybox-group="blocksurvival">
 										<img class="gallery" src="img/blocksurvival2.png" alt="blocksurvival2"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/blocksurvival3.png" class="fancybox-thumbs" data-fancybox-group="blocksurvival">
 										<img class="gallery" src="img/blocksurvival3.png" alt="blocksurvival3"/>
 									</a>
@@ -360,27 +416,27 @@
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
-								<div class="item"> 
+								<div class="item">
 									<a href="img/war1.png" class="fancybox-thumbs" data-fancybox-group="war">
 										<img class="gallery" src="img/war1.png" alt="war1"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/war2.png" class="fancybox-thumbs" data-fancybox-group="war">
 										<img class="gallery" src="img/war2.png" alt="war2"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/war3.png" class="fancybox-thumbs" data-fancybox-group="war">
 										<img class="gallery" src="img/war3.png" alt="war3"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/war4.png" class="fancybox-thumbs" data-fancybox-group="war">
 										<img class="gallery" src="img/war3.png" alt="war3"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/war5.png" class="fancybox-thumbs" data-fancybox-group="war">
 										<img class="gallery" src="img/war3.png" alt="war3"/>
 									</a>
@@ -393,7 +449,7 @@
 						</div>
 					</div>
 				</li>
-				
+
 				<li id="organizer" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -404,17 +460,17 @@
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
-								<div class="item"> 
+								<div class="item">
 									<a href="img/organizer1.png" class="fancybox-thumbs" data-fancybox-group="organizer">
 										<img class="gallery" src="img/organizer1.png" alt="organizer"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/organizer2.png" class="fancybox-thumbs" data-fancybox-group="organizer">
 										<img class="gallery" src="img/organizer2.png" alt="organizer"/>
 									</a>
 								</div>
-								<div class="item"> 
+								<div class="item">
 									<a href="img/organizer3.png" class="fancybox-thumbs" data-fancybox-group="organizer">
 										<img class="gallery" src="img/organizer3.png" alt="organizer"/>
 									</a>
@@ -459,14 +515,14 @@
 				<!-- Circle image 64x64 -->
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed2.png" alt="Science">
-				</div> 
+				</div>
 				<!-- Info 2 Education -->
 				<div class="cd-timeline-content">
 					<h2>CEO, Founder, and Head Developer</h2>
 					<h3>TRUTECH INNOVATIONS INC.</h3>
 					<span class="cd-date">May 2014 - Present</span>
-				</div> 
-			</div> 
+				</div>
+			</div>
 			<!-- 3 Item -->
 			<div class="cd-timeline-block">
 				<!-- Circle image 64x64 -->
@@ -478,14 +534,14 @@
 					<h2>High School</h2>
 					<h3>PIERRE ELLIOT TRUDEAU HIGH SCHOOL</h3>
 					<span class="cd-date">September 2010 - June 2014</span>
-				</div> 
-			</div> 
+				</div>
+			</div>
 			<!-- The Beginning of Times image -->
 			<div class="cd-timeline-block">
 				<!-- Circle image 64x64 -->
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed4.png" alt="Times">
-				</div> 
+				</div>
 			</div>
 		</article>
 		<!-- The Beginning of Times item -->
@@ -567,7 +623,7 @@
 	<script src="js/jquery.fancybox.pack.js"></script>
 	<script src="js/jquery.fancybox-media.js"></script>
 	<script src="js/jquery.fancybox-thumbs.js"></script>
-	<script> 
+	<script>
 	$(document).ready(function(){
 		$('a[href^="#"]').on('click',function (e) {
 		    e.preventDefault();
@@ -598,21 +654,21 @@
 		});
 
 		$('.fancybox-media').click(function(){
-			$.fancybox({ 
-				'padding'	: 0, 
-				'autoScale': false, 
-				'transitionIn': 'none', 
-				'transitionOut': 'none', 
-				'title': this.title, 
-				'width': 640, 
-				'height': 385, 
-				'href': this.href.replace(new RegExp("watch\\?v=", "i"), 'v/'), 
-				'type': 'swf', 
-				'swf': { 
-					'wmode': 'transparent', 
-					'allowfullscreen': 'true' 
+			$.fancybox({
+				'padding'	: 0,
+				'autoScale': false,
+				'transitionIn': 'none',
+				'transitionOut': 'none',
+				'title': this.title,
+				'width': 640,
+				'height': 385,
+				'href': this.href.replace(new RegExp("watch\\?v=", "i"), 'v/'),
+				'type': 'swf',
+				'swf': {
+					'wmode': 'transparent',
+					'allowfullscreen': 'true'
 				}
-			});	
+			});
 			return false;
 		});
 
