Added the logos for frameworks

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 					<div class="framework row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/android.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Android</div>
@@ -142,7 +142,7 @@
 						</div>
 					</div>
 					<div class="framework row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/rails.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Rails</div>
@@ -166,7 +166,7 @@
 						</div>
 					</div>
 					<div class="framework row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/bootstrap.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Bootstrap</div>
@@ -191,7 +191,7 @@
 						</div>
 					</div>
 					<div class="framework row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Meteor.js</div>
@@ -202,7 +202,7 @@
 							</div>
 					</div>
 					<div class="framework row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/java.png"/></div>
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Node.js</div>
