--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<b>a Student.</b>
 				<b>a Developer.</b>
 				<b>a Designer.</b>
-				<b>an Software Engineer.</b>
+				<b>a Software Engineer.</b>
 			</span>
 		</h1>
 	</section>
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h2 class="title-main">About Me.</h2>
-					<p class="text-main">Hi there. My name is Alston Lin, and welcome to my website! I am currently a student at the University of Waterloo in the Software Engineering class of 2020. I am currently working on many projects outside of school, including my own start-up company, TruTech Innovations. If you would like to know more about myself, see the sections below, and check out my resume!</p>
+					<p class="text-main">Hi there! My name is Alston Lin, and welcome to my website! I am currently a student at the University of Waterloo in the Software Engineering class of 2020. I am working on many projects outside of school, including my own start-up, TruTech Innovations. If you would like to know more about myself, see the sections below, and check out my resume!</p>
 				</div>
 				<div class="col-md-6">
 					<img class="img-responsive center-block" src="img/waterloo.png" alt="Waterloo">
@@ -147,7 +147,7 @@
 							<div class="row">
 								<div class="col-sm-12 title-skill">Ruby</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-red skill-fifty"></div>
+									<div class="this-skill skill-red skill-thirty"></div>
 								</div>
 							</div>
 						</div>
@@ -158,7 +158,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Rails</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-red skill-seventy"></div>
+										<div class="this-skill skill-red skill-eighty"></div>
 									</div>
 								</div>
 							</div>
@@ -207,7 +207,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Meteor.js</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-fifty"></div>
+										<div class="this-skill skill-green skill-thirty"></div>
 									</div>
 								</div>
 							</div>
@@ -218,7 +218,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Node.js</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-green skill-twenty"></div>
+										<div class="this-skill skill-green skill-thirty"></div>
 									</div>
 								</div>
 							</div>
@@ -232,7 +232,7 @@
 							<div class="row">
 								<div class="title-skill">Python</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-purple skill-seventy"></div>
+									<div class="this-skill skill-purple skill-eighty"></div>
 								</div>
 							</div>
 						</div>
@@ -244,7 +244,7 @@
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
 						<div class="col-sm-10">
 							<div class="row">
-								<div class="col-sm-12 title-skill">C</div>
+								<div class="col-sm-12 title-skill">C and C++</div>
 								<div class="col-sm-12 bar-skill">
 									<div class="this-skill skill-blue skill-seventy"></div>
 								</div>
@@ -264,24 +264,24 @@
 			<h2 class="title-main">Portfolio.</h2>
 			<h3 class="filter-heading">Languages and Frameworks</h3>
 			<div id="filter-language">
-				<button id="all-languages" class="filter-language">
+				<button id="all-languages" class="filter-language btn	">
 					<h3 class="filter-title">All</h3>
 				</button>
 			</div>
 			<h3 class="filter-heading">Fields</h3>
 			<div id="filter-field">
-				<button id="all-fields" class="filter-field">
+				<button id="all-fields" class="filter-field btn">
 					<h3 class="filter-title">All</h3>
 				</button>
 			</div>
 		</div>
 
 		<div class="container">
-			<ul class="row portfolio">
+			<ul class="list-inline row portfolio">
 				<li id="calculall" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="project-title">Calculall</h3>
+							<h4 class="project-title">Calculall</h4>
 							<a href="https://github.com/AlstonLin/Calculall">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -293,6 +293,16 @@
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-portrait">
+								<div class="item">
+									<a class="fancybox-media" href="https://www.youtube.com/v/AGO83mh7ftI?fs=1&autoplay=1">
+										<img class="gallery" src="img/calculall-trailer.png" alt="calculall-trailer"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/calculall1.png" class="fancybox-thumbs" data-fancybox-group="calculall">
+										<img class="gallery" src="img/calculall1.png" alt="calculall1"/>
+									</a>
+								</div>
 								<div class="item">
 									<a href="img/calculall1.png" class="fancybox-thumbs" data-fancybox-group="calculall">
 										<img class="gallery" src="img/calculall1.png" alt="calculall1"/>
@@ -337,13 +347,97 @@
 						</div>
 					</div>
 				</li>
-
+				<li id="polarfeed" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">PolarFeed</h4>
+							<a href="https://github.com/AlstonLin/PolarFeed">
+							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/polarfeed">
+							  <input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/polarfeed1.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed1.png" alt="polarfeed"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/polarfeed2.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed2.png" alt="polarfeed"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/polarfeed3.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed3.png" alt="polarfeed"/>
+									</a>
+								</div>
+							</div>
+							<div id="polarfeed-tags-languages" class="tags">
+							</div>
+							<div id="polarfeed-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
+				<li id="muriqui" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Muriqui</h4>
+							<a href="https://github.com/AlstonLin/Muriqui">
+							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://muriqui.xyz">
+							  <button class="btn btn-info project-icon"><b>Website</b></button>
+							</a>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/muriqui1.png" class="fancybox-thumbs" data-fancybox-group="muriqui">
+										<img class="gallery" src="img/muriqui1.png" alt="muriqui"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/muriqui2.png" class="fancybox-thumbs" data-fancybox-group="muriqui">
+										<img class="gallery" src="img/muriqui2.png" alt="muriqui"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/muriqui3.png" class="fancybox-thumbs" data-fancybox-group="muriqui">
+										<img class="gallery" src="img/muriqui3.png" alt="muriqui"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/muriqui4.png" class="fancybox-thumbs" data-fancybox-group="muriqui">
+										<img class="gallery" src="img/muriqui4.png" alt="muriqui"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/muriqui5.png" class="fancybox-thumbs" data-fancybox-group="muriqui">
+										<img class="gallery" src="img/muriqui5.png" alt="muriqui"/>
+									</a>
+								</div>
+							</div>
+							<div id="muriqui-tags-languages" class="tags">
+							</div>
+							<div id="muriqui-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
 				<li id="fuser" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="project-title">Fuser</h3>
+							<h4 class="project-title">Fuser</h4>
 							<a href="https://github.com/AlstonLin/HackWestern-Fuser">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/fuser">
+							  <input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -375,7 +469,7 @@
 				<li id="block-survival" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="project-title">Block Survival</h3>
+							<h4 class="project-title">Block Survival</h4>
 							<a href="https://github.com/AlstonLin/Block-Survival">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -387,7 +481,7 @@
 							<div class="owl-carousel-landscape">
 								<div class="item">
 									<a class="fancybox-media" href='http://www.youtube.com/v/Y7VO62_o-ZI?fs=1&autoplay=1'>
-										<img class="gallery" src="img/trailer-img.png" alt="blocksurvival"/>
+										<img class="gallery" src="img/survival-trailer.png" alt="blocksurvival"/>
 									</a>
 								</div>
 								<div class="item">
@@ -417,7 +511,7 @@
 				<li id="war" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="project-title">War of the Ages</h3>
+							<h4 class="project-title">War of the Ages</h4>
 							<a href="https://github.com/AlstonLin/War-of-the-Ages">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -464,7 +558,7 @@
 				<li id="organizer" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
-							<h3 class="project-title">SE2020 Organizer</h3>
+							<h4 class="project-title">SE2020 Organizer</h4>
 							<a href="https://github.com/JamesHageman/SE2020-Organizer">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -490,6 +584,42 @@
 							<div id="organizer-tags-languages" class="tags">
 							</div>
 							<div id="organizer-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
+				<li id="3draw" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">3Draw</h4>
+							<a href="https://github.com/AlstonLin/3Draw">
+							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/bostonhacksapp">
+							  <input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/3draw1.png" class="fancybox-thumbs" data-fancybox-group="3draw">
+										<img class="gallery" src="img/3draw1.png" alt="3draw"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/3draw2.png" class="fancybox-thumbs" data-fancybox-group="3draw">
+										<img class="gallery" src="img/3draw2.png" alt="3draw"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/3draw3.png" class="fancybox-thumbs" data-fancybox-group="3draw">
+										<img class="gallery" src="img/3draw3.png" alt="3draw"/>
+									</a>
+								</div>
+							</div>
+							<div id="3draw-tags-languages" class="tags">
+							</div>
+							<div id="3draw-tags-fields" class="tags">
 							</div>
 						</div>
 					</div>
@@ -594,7 +724,7 @@
 			<p class="separator-ct"></p>
 			<div class="row">
 				<div class="col-md-12 col-xs-12 txt-center">
-					<p class="text-ct">alston@trutechinnovations.com</p>
+					<p class="text-ct">alstonlin812@gmail.com</p>
 				</div>
 			</div>
 		</div>
@@ -638,10 +768,8 @@
 	$(document).ready(function(){
 		$('a[href^="#"]').on('click',function (e) {
 		    e.preventDefault();
-
 		    var target = this.hash;
 		    var $target = $(target);
-
 		    $('html, body').stop().animate({
 		        'scrollTop': $target.offset().top
 		    }, 900, 'swing', function () {
@@ -651,11 +779,9 @@
 	    $('.fancybox-thumbs').fancybox({
 			prevEffect : 'none',
 			nextEffect : 'none',
-
 			closeBtn  : false,
 			arrows    : false,
 			nextClick : true,
-
 			helpers : {
 				thumbs : {
 					width  : 50,
