Fixed some wierd issues

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		</div>
 
 		<div class="container">
-			<ul class="list-inline row portfolio">
+			<ul class="row portfolio">
 				<li id="calculall" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -694,7 +694,7 @@
 	<section id="links">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12 btn-class col-md-7">
+				<div class="col-md-8 btn-class">
 					<a href="http://www.trutechinnovations.com" class="social-ink">
 						<img class="socl" src="img/trutech.png" alt="trutech"/>
 					</a>
@@ -708,7 +708,7 @@
 						<img class="socl" src="img/devpost.png" alt="devpost"/>
 					</a>
 				</div>
-				<div class="col-sm-5 btn-class hidden-sm hidden-xs">
+				<div class="col-md-4 btn-class">
 					<a class="btn-dwnld" href="assets/resume.pdf">Resume</a>
 				</div>
 			</div>
