Changed 3Draw pictures

--- a/index.html
+++ b/index.html
@@ -252,6 +252,20 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-md-6 separ">
+					<div class="row">
+						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
+						<div class="col-sm-10">
+							<div class="row">
+								<div class="col-sm-12 title-skill">C and C++</div>
+								<div class="col-sm-12 bar-skill">
+									<div class="this-skill skill-blue skill-seventy"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p class="text-main mywhite text-center"><br>I'm also fluent in English, French, and Mandarin</p>
 		</div>
@@ -614,6 +628,11 @@
 								<div class="item">
 									<a href="img/3draw3.png" class="fancybox-thumbs" data-fancybox-group="3draw">
 										<img class="gallery" src="img/3draw3.png" alt="3draw"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/3draw4.png" class="fancybox-thumbs" data-fancybox-group="3draw">
+										<img class="gallery" src="img/3draw4.png" alt="3draw"/>
 									</a>
 								</div>
 							</div>
