Added content, formatting is very wierd now

--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
 					<h3 class="filter-title">All</h3>
 				</button>
 			</div>
-		</div>
-
-		<div class="container">
 			<ul class="row portfolio">
+
 				<li id="calculall" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Calculall</h4>
+							<h5 class="project-description">An Android calculator that can display fractions, compute indefinite integrals, diagonalize matrices, and more!</h5>
+							<h5 class="contribution"><i>Created the high-level framework, algebraic simplification algorithm, and the Custom View to display mathematical expressions naturally</i></h5>
 							<a href="https://github.com/AlstonLin/Calculall">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -361,51 +361,18 @@
 						</div>
 					</div>
 				</li>
-				<li id="polarfeed" class='col-md-6'>
-					<div class="panel">
-						<div class="panel-heading">
-							<h4 class="project-title">PolarFeed</h4>
-							<a href="https://github.com/AlstonLin/PolarFeed">
-							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
-							</a>
-							<a href="http://devpost.com/software/polarfeed">
-							  <input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
-							</a>
-						</div>
-						<div class="panel-body">
-							<div class="owl-carousel-landscape">
-								<div class="item">
-									<a href="img/polarfeed1.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
-										<img class="gallery" src="img/polarfeed1.png" alt="polarfeed"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/polarfeed2.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
-										<img class="gallery" src="img/polarfeed2.png" alt="polarfeed"/>
-									</a>
-								</div>
-								<div class="item">
-									<a href="img/polarfeed3.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
-										<img class="gallery" src="img/polarfeed3.png" alt="polarfeed"/>
-									</a>
-								</div>
-							</div>
-							<div id="polarfeed-tags-languages" class="tags">
-							</div>
-							<div id="polarfeed-tags-fields" class="tags">
-							</div>
-						</div>
-					</div>
-				</li>
+
 				<li id="muriqui" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Muriqui</h4>
+							<h5 class="project-description">An web app that allows students to share their test cases for assignments, and have the unit testing source code automatically generated for them.</h5>
+							<h5 class="contribution"><i>Created everything, except for some of the design</i></h5>
 							<a href="https://github.com/AlstonLin/Muriqui">
-							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
 							<a href="http://muriqui.xyz">
-							  <button class="btn btn-info project-icon"><b>Website</b></button>
+								<button class="btn btn-info project-icon"><b>Website</b></button>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -443,10 +410,52 @@
 						</div>
 					</div>
 				</li>
+
+				<li id="polarfeed" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">PolarFeed</h4>
+							<h5 class="project-description">An Android app where attendees of an event can upload and share their pictures live with everyone else.</h5>
+							<h5 class="contribution"><i>Created most of the Android app, and handled some of the RESTful actions on the Node server</i></h5>
+							<a href="https://github.com/AlstonLin/PolarFeed">
+							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/polarfeed">
+							  <input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a href="img/polarfeed1.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed1.png" alt="polarfeed"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/polarfeed2.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed2.png" alt="polarfeed"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/polarfeed3.png" class="fancybox-thumbs" data-fancybox-group="polarfeed">
+										<img class="gallery" src="img/polarfeed3.png" alt="polarfeed"/>
+									</a>
+								</div>
+							</div>
+							<div id="polarfeed-tags-languages" class="tags">
+							</div>
+							<div id="polarfeed-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+				</li>
+
 				<li id="fuser" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Fuser</h4>
+							<h5 class="project-description">An Android app that users can use to host their own radio station on the internet.</h5>
+							<h5 class="contribution"><i>Created the entire Android app, except for the design</i></h5>
 							<a href="https://github.com/AlstonLin/HackWestern-Fuser">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -484,6 +493,8 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Block Survival</h4>
+							<h5 class="project-description">A Minecraft clone, created with JMonkeyEngine(OpenGL).</h5>
+							<h5 class="contribution"><i>Created by myself</i></h5>
 							<a href="https://github.com/AlstonLin/Block-Survival">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -526,6 +537,8 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">War of the Ages</h4>
+							<h5 class="project-description">A Real Time Strategy game where players control settlements, building their economy and army to defeat other players or an AI.</h5>
+							<h5 class="contribution"><i>Created the high level framework, most of the core algorithms, and networking.</i></h5>
 							<a href="https://github.com/AlstonLin/War-of-the-Ages">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -573,6 +586,8 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">SE2020 Organizer</h4>
+							<h5 class="project-description">An web app that assists other students in reminding them of deadlines, and allowing them to easily share lecture notes.</h5>
+							<h5 class="contribution"><i>Created most of the back-end and templates</i></h5>
 							<a href="https://github.com/JamesHageman/SE2020-Organizer">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -602,10 +617,13 @@
 						</div>
 					</div>
 				</li>
+
 				<li id="3draw" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">3Draw</h4>
+							<h5 class="project-description">A web app where users can collaborate in creating 3D models in realtime.</h5>
+							<h5 class="contribution"><i>Created the high level framework, 3D algorithms, and configured the server</i></h5>
 							<a href="https://github.com/AlstonLin/3Draw">
 							  <input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
@@ -642,7 +660,80 @@
 							</div>
 						</div>
 					</div>
+
+					<li id="lost" class='col-md-6'>
+						<div class="panel">
+							<div class="panel-heading">
+								<h4 class="project-title">WatIsLost <i>(Prototype)</i></h4>
+								<h5 class="project-description">An Android app that helps students navigate uWaterloo by showing them how to navigate inside and outside of buildings.</h5>
+								<h5 class="contribution"><i>Created the back end API, and the Android prototype to showcase it</i></h5>
+								<a href="https://github.com/AlstonLin/WatIsLost">
+									<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+								</a>
+							</div>
+							<div class="panel-body">
+								<div class="owl-carousel-landscape">
+									<div class="item">
+										<a href="img/lost1.png" class="fancybox-thumbs" data-fancybox-group="lost">
+											<img class="gallery" src="img/lost1.png" alt="lost"/>
+										</a>
+									</div>
+									<div class="item">
+										<a href="img/lost2.png" class="fancybox-thumbs" data-fancybox-group="lost">
+											<img class="gallery" src="img/lost2.png" alt="lost"/>
+										</a>
+									</div>
+									<div class="item">
+										<a href="img/lost3.png" class="fancybox-thumbs" data-fancybox-group="lost">
+											<img class="gallery" src="img/lost3.png" alt="lost"/>
+										</a>
+									</div>
+									<div class="item">
+										<a href="img/lost4.png" class="fancybox-thumbs" data-fancybox-group="lost">
+											<img class="gallery" src="img/lost4.png" alt="lost"/>
+										</a>
+									</div>
+								</div>
+								<div id="lost-tags-languages" class="tags">
+								</div>
+								<div id="lost-tags-fields" class="tags">
+								</div>
+							</div>
+						</div>
 				</li>
+
+				<li id="troll" class='col-md-6'>
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="project-title">Anonygoose</h4>
+							<h5 class="attention"><i>This app was created for TerribleHacks. It is supposed to be a joke and meant to be bad.
+								This app was intentionally designed to have a terrible UI and even worse security.</i></h5>
+							<h5 class="project-description">A messaging app where Geese and anonymously message each other. Available in Web, Android, and iOS.</h5>
+							<h5 class="contribution"><i>Created the entire Android app and part of the Node server</i></h5>
+							<a href="https://github.com/AlstonLin/anonygoose-Android">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+						</div>
+						<div class="panel-body">
+							<div class="owl-carousel-landscape">
+								<div class="item">
+									<a class="fancybox-media" href="https://www.youtube.com/watch?v=fqiR-saP6Hw&autoplay=1">
+										<img class="gallery" src="img/troll-trailer.png" alt="troll-trailer"/>
+									</a>
+								</div>
+								<div class="item">
+									<a href="img/troll.png" class="fancybox-thumbs" data-fancybox-group="troll">
+										<img class="gallery" src="img/troll.png" alt="troll"/>
+									</a>
+								</div>
+							</div>
+							<div id="troll-tags-languages" class="tags">
+							</div>
+							<div id="troll-tags-fields" class="tags">
+							</div>
+						</div>
+					</div>
+			</li>
 			</ul>
 		</div>
 	</section>
