Minor bug fixes and design changes

--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
 					</div>
 				</div>
 			</div>
-			<p class="text-main mywhite text-center"><br>I'm also fluent in English, French, and Mandarin</p>
+			<br><br><br>
+			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Material Design Principles, Fluency in English, French, and Mandarin</p>
 		</div>
 	</section>
 	<!-- // Skills-->
@@ -498,7 +499,7 @@
 						</div>
 					</div>
 				</li>
-				
+
 				<li id="block-survival" class='col-md-6'>
 					<div class="panel">
 						<div class="panel-heading">
@@ -707,13 +708,16 @@
 					<div class="panel">
 						<div class="panel-heading">
 							<h4 class="project-title">Anonygoose</h4>
+							<a href="https://github.com/AlstonLin/anonygoose-Android">
+								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
+							</a>
+							<a href="http://devpost.com/software/anonygoose-loisrf">
+								<input type="image" alt="Devpost Link" src="img/devpost.svg" class="btn btn-default project-icon"></input>
+							</a>
 							<h5 class="attention"><i>This app was created for TerribleHacks. It is supposed to be a joke and meant to be bad.
 								This app was intentionally designed to have a terrible UI and even worse security.</i></h5>
 							<h5 class="project-description">A messaging app where Geese and anonymously message each other. Available in Web, Android, and iOS.</h5>
 							<h5 class="contribution"><i>Created the entire Android app and part of the Node server</i></h5>
-							<a href="https://github.com/AlstonLin/anonygoose-Android">
-								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
-							</a>
 						</div>
 						<div class="panel-body">
 							<div class="owl-carousel-landscape">
