--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 				</div>
 			</div>
 			<br><br><br>
-			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Material Design Principles, Fluency in English, French, and Mandarin</p>
+			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Vim, Material Design Principles, Fluency in English, French, and Mandarin</p>
 		</div>
 	</section>
 	<!-- // Skills-->
