I need to sleep more...

--- a/index.html
+++ b/index.html
@@ -252,23 +252,9 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-6 separ">
-					<div class="row">
-						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="c" src="img/c.png"/></div>
-						<div class="col-sm-10">
-							<div class="row">
-								<div class="col-sm-12 title-skill">C and C++</div>
-								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-blue skill-seventy"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 			<br><br><br>
-			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Vim, Material Design Principles, Fluency in English, French, and Mandarin</p>
+			<p id="other-skills" class="mywhite text-center">Other Skills: Git, Bash, Vim, Material Design Principles<BR>Fluent in English, French, and Mandarin</p>
 		</div>
 	</section>
 	<!-- // Skills-->
