Changed skills indenting

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="framework row">
+					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/android.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
@@ -152,7 +152,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="framework row">
+					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/rails.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
@@ -171,18 +171,18 @@
 							<div class="row">
 								<div class="col-sm-12 title-skill">HTML and CSS</div>
 								<div class="col-sm-12 bar-skill">
-									<div class="this-skill skill-pink skill-fifty"></div>
+									<div class="this-skill skill-pink skill-sixty"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="framework row">
+					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/bootstrap.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
 									<div class="col-sm-12 title-framework">Bootstrap</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-pink skill-eighty"></div>
+										<div class="this-skill skill-pink skill-sixtyjob"></div>
 									</div>
 								</div>
 							</div>
@@ -201,7 +201,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="framework row">
+					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/meteor.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
@@ -212,7 +212,7 @@
 								</div>
 							</div>
 					</div>
-					<div class="framework row">
+					<div class="row">
 						<div class="hidden-xs col-sm-2 icon-skill"><img class="img-skill" alt="java" src="img/node.png"/></div>
 							<div class="col-sm-10">
 								<div class="row">
