Slightly adjusted skills

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Android</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-aqua skill-hundred"></div>
+										<div class="this-skill skill-aqua skill-ninety"></div>
 									</div>
 								</div>
 							</div>
@@ -182,7 +182,7 @@
 								<div class="row">
 									<div class="col-sm-12 title-framework">Bootstrap</div>
 									<div class="col-sm-12 bar-skill">
-										<div class="this-skill skill-pink skill-sixtyjob"></div>
+										<div class="this-skill skill-pink skill-sixty"></div>
 									</div>
 								</div>
 							</div>
