--- a/index.html
+++ b/index.html
@@ -285,10 +285,7 @@
 								<input type="image" alt="Github Link" src="img/github_logo.png" class="btn btn-default project-icon"></input>
 							</a>
 							<a href="https://play.google.com/store/apps/details?id=com.trutechinnovations.calculall">
-								<img alt="Get it on Google Play"
-										 src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png"
-										 class="project-icon"/>
-							</a>
+								<img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" height="40" class="pull-right"/></a>
 							<h5 class="project-description">An Android calculator that can display fractions, compute indefinite integrals, diagonalize matrices, and more!</h5>
 							<h5 class="contribution"><i>Created the high-level framework, algebraic simplification algorithm, and the Custom View to display mathematical expressions naturally</i></h5>
 						</div>
