--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 		</div>
 
 		<!-- Timeline Responsive -->
-		<article id="cd-timeline" class="cd-container">`
+		<article id="cd-timeline" class="cd-container">
 			<!-- 1 Item -->
 			<div class="cd-timeline-block">
 				<!-- Circle image 64x64 -->
